Archive/bd74706ee5ffe22a98c58be4659545a4-50d9cfc8a1d350e7409e81e87c2653ba/output
In file included from /usr/local/include/c++/4.8.0/vector:63:0,
                 from main.cpp:3:
/usr/local/include/c++/4.8.0/bits/stl_uninitialized.h: In instantiation of 'static void std::__uninitialized_default_n_1<true>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = int (*)[2]; _Size = long unsigned int]':
/usr/local/include/c++/4.8.0/bits/stl_uninitialized.h:544:33:   required from 'void std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = int (*)[2]; _Size = long unsigned int]'
/usr/local/include/c++/4.8.0/bits/stl_uninitialized.h:605:50:   required from 'void std::__uninitialized_default_n_a(_ForwardIterator, _Size, std::allocator<_Tp>&) [with _ForwardIterator = int (*)[2]; _Size = long unsigned int; _Tp = int [2]]'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:1221:28:   required from 'void std::vector<_Tp, _Alloc>::_M_default_initialize(std::vector<_Tp, _Alloc>::size_type) [with _Tp = int [2]; _Alloc = std::allocator<int [2]>; std::vector<_Tp, _Alloc>::size_type = long unsigned int]'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:271:34:   required from 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = int [2]; _Alloc = std::allocator<int [2]>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int [2]>]'
main.cpp:24:29:   required from here
/usr/local/include/c++/4.8.0/bits/stl_uninitialized.h:515:42: error: functional cast to array type '_ValueType {aka int [2]}'
    std::fill_n(__first, __n, _ValueType());
                                          ^
